--- a/MVVMHookupDemo.csproj
+++ b/MVVMHookupDemo.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>CustomerListView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Customers\CustomerListViewModel.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="Services\CustomersRepository.cs" />
